kubernetes_dz5/redmine-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deploy
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-deploy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine-deploy
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
