kubernetes_dz5/pg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: redmine
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg-deploy
  type: ClusterIP
