kubernetes_dz5/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: redmine
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine-deploy
  type: ClusterIP
